# linux-multimedia-gstreamer_plugin

./: Config.in  gst-aml-drm-plugins.mk
gst-aml-drm-plugins-1.0/: AUTHORS  Makefile.am  configure.ac
gst-aml-drm-plugins-1.0/src/: Makefile.am
gst-aml-drm-plugins-1.0/src/dummy/: Makefile.am  gstdummydrm.c  gstdummydrm.h
gst-aml-drm-plugins-1.0/src/ge2d/: gst_ge2d.c  gst_ge2d_flip.c  gst_ge2d_flip.h
gst-aml-drm-plugins-1.0/src/gst_svp_ext/: GstPerf.h  Makefile.am  amlogic_svp_impl.cpp  gst_svp_logging.cpp  gst_svp_logging.h  gst_svp_meta.cpp  gst_svp_meta.h  gst_svp_meta_private.h  gst_svp_performance.cpp  gst_svp_performance.h  gst_svp_scopedlock.cpp  gst_svp_scopedlock.h  sec_security_datatype.h
gst-aml-drm-plugins-1.0/src/gst_svp_ext/plugins/: gst_svp_payload.cpp  gst_svp_payload.h
gst-aml-drm-plugins-1.0/src/hdcp/: gstamlhdcp.c  gstamlhdcp.h
gst-aml-drm-plugins-1.0/src/secmem/: Makefile.am  gstsecmemallocator.c  gstsecmemallocator.h  gstsecmemallocator.pc.in
gst-aml-drm-plugins-1.0/src/secure_parse/: Makefile.am  gst_aml_sec_parse.c  gstav1_sec_trans.c  gstav1_sec_trans.h  gsth264_sec_parse.c  gsth264_sec_parse.h  gsth265_sec_parse.c  gsth265_sec_parse.h  gstvp9_sec_trans.c  gstvp9_sec_trans.h
